[package]
name = "rskvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["derive"]}
failure = "0.1.8"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.6"
itoa = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"