[package]
name = "rskvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["derive"]}
failure = "0.1.8"
log = "0.4.6"
itoa = "1.0"
tokio = { version = "1", features = ["full"] }
bytes = "1"